# commit-pilot

./: .commitpilotignore  .gitignore  README.md  cli.py  config.py  pyproject.toml  run_tests.py  setup.py
.github/workflows/: ci.yml
core/: analyzer.py  filters.py  git.py  redaction.py
llm/: __init__.py  base.py  openai.py
tests/: test_analyzer.py  test_analyzer_mvp.py  test_benchmark.py  test_cli.py  test_filters.py  test_git.py  test_openai.py  test_redaction.py
